Improved handling of endorsed directories for Java 9. Patch by rjung.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc8.0.x/trunk@1810283 13f79535-47bb-0310-9956-ffa450edef68